<?xml version="1.0" encoding="utf-8"?>

<resources>
    
    <string name="app_name">Substrate</string>
    <string name="app_author">Moonblink</string>
    <string name="app_desc">A collection of live wallpapers.</string>
         
          
    <!-- Boilerplate Dialogs. -->
     
    <string name="eula_title">Using Live Wallpapers</string>
    
    <string name="eula_text">This application displays previews of some
live wallpapers.  To actually use one of these as your wallpaper, you
need to set it as follows:\n\
\n\
• Go to your home screen.\n\
• Press the menu key.\n\
• Select \"Wallpaper\", then \"Live wallpapers\".\n\
• Pick your preferred wallpaper.\n\
\n\
For more information, please read the help available in this application\'s
menu.\n</string>


    <string name="about_text"><b>Substrate</b> by Ian Cameron Smith
(headstay).\n\
\n\
For information and source code see the project home page.\n\
\n\
This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.\n\
\n\
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
for more details.\n</string>
    
    <string name="url_license">http://www.gnu.org/licenses/gpl-2.0.html</string>
    <string name="url_homepage">http://code.google.com/p/moonblink/wiki/Substrate</string>
        
        
    <!-- Button strings. -->
    
    <string name="button_ok">OK</string>
    <string name="button_close">OK</string>
    <string name="button_license">License</string>
    <string name="button_homepage">Project</string>

          
    <!-- Main Menu. -->
       
    <string name="menu_select">Select hack</string>
    <string name="menu_prefs">Hack preferences</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
      
          
    <!-- Help.  See arrays.xml for the help content. -->
    
    <string name="help_title">Substrate User\'s Manual</string>
 
    
    <!-- Common EyeCandy Preferences. -->
     
    <string name="eyecandy_settings">Preferences</string>
    
    <string name="eyecandy_prefs_title">Preferences</string>
    
    <string name="eyecandy_prefs_bg">Background colour</string>
    <string name="eyecandy_prefs_bg_summary">Select a background colour for the wallpaper</string>
    <string name="eyecandy_prefs_bg_title">Background Colour</string>
     
    <string name="eyecandy_prefs_palette">Colour palette</string>
    <string name="eyecandy_prefs_palette_summary">Select a colour palette to render with</string>
    <string name="eyecandy_prefs_palette_title">Colour Palette</string>
    
    <string name="eyecandy_prefs_speed">Animation speed</string>
    <string name="eyecandy_prefs_speed_summary">Faster risks a less responsive home screen</string>
    <string name="eyecandy_prefs_speed_title">Animation Speed</string>
      
      
    <!-- Substrate. -->
     
    <string name="substrate_title">Substrate</string>
    <string name="substrate_author">Moonblink</string>
    <string name="substrate_desc">Lines like crystals slowly grow on a computational substrate.</string>
    
    <!-- Substrate Preferences. -->
    
    <string name="substrate_settings">Substrate preferences</string>
    
    <string name="substrate_prefs_title">Substrate Preferences</string>
    
    <string name="substrate_prefs_cycles">Run time</string>
    <string name="substrate_prefs_cycles_summary">Number of iterations to run for before resetting</string>
    <string name="substrate_prefs_cycles_title">Run Time</string>
    
    <string name="substrate_prefs_cracks">Number of cracks</string>
    <string name="substrate_prefs_cracks_summary">Number of cracks to develop at once</string>
    <string name="substrate_prefs_cracks_title">Number of Cracks</string>
    
    <string name="substrate_prefs_sand">Sand density</string>
    <string name="substrate_prefs_sand_summary">Amount of sand-paint stroke to draw on cracks</string>
    <string name="substrate_prefs_sand_title">Sand Density</string>
   
    <!-- Interaggregate. -->
     
    <string name="interaggregate_title">Inter.Aggregate</string>
    <string name="interaggregate_author">Moonblink</string>
    <string name="interaggregate_desc">The intersections of slowly-moving circles draw out sand patterns.</string>
    
    <!-- Interaggregate Preferences. -->
    
    <string name="interaggregate_settings">Inter.Aggregate preferences</string>
    
    <string name="interaggregate_prefs_title">Inter.Aggregate Preferences</string>
    
    <string name="interaggregate_prefs_cycles">Run time</string>
    <string name="interaggregate_prefs_cycles_summary">Number of iterations to run for before resetting</string>
    <string name="interaggregate_prefs_cycles_title">Run Time</string>
    
    <string name="interaggregate_prefs_discs">Number of discs</string>
    <string name="interaggregate_prefs_discs_summary">Number of moving discs intersecting in the scene</string>
    <string name="interaggregate_prefs_discs_title">Number of Discs</string>
    
    <string name="interaggregate_prefs_dsize">Disc sizes</string>
    <string name="interaggregate_prefs_dsize_summary">Sizes of the discs</string>
    <string name="interaggregate_prefs_dsize_title">Disc Sizes</string>
    
    <string name="interaggregate_prefs_2dim">Both dimensions</string>
    <string name="interaggregate_prefs_2dim_summary_off">Discs move only horizontally</string>
    <string name="interaggregate_prefs_2dim_summary_on">Discs move horizontally and vertically</string>
    
    <string name="interaggregate_prefs_sand">Sand density</string>
    <string name="interaggregate_prefs_sand_summary">Amount of sand-paint stroke to draw the intersections with</string>
    <string name="interaggregate_prefs_sand_title">Sand Density</string>
    
    <!-- Sand Traveller. -->
     
    <string name="sandtrav_title">Sand.Traveler</string>
    <string name="sandtrav_author">Moonblink</string>
    <string name="sandtrav_desc">Traveling particles, each in pursuit of another, sweeping out paths of color.</string>
    
    <!-- Sand Traveller Preferences. -->
    
    <string name="sandtrav_settings">Sand.Traveler preferences</string>
    
    <string name="sandtrav_prefs_title">Sand.Traveler Preferences</string>
    
    <string name="sandtrav_prefs_cycles">Run time</string>
    <string name="sandtrav_prefs_cycles_summary">Number of iterations to run for before resetting</string>
    <string name="sandtrav_prefs_cycles_title">Run Time</string>
      
    <string name="sandtrav_prefs_spaint">Use sand painter</string>
    <string name="sandtrav_prefs_spaint_summary_off">A simple painter will be used.</string>
    <string name="sandtrav_prefs_spaint_summary_on">A sand painter will be used.</string>
    
    <string name="sandtrav_prefs_velo">Initial velocity</string>
    <string name="sandtrav_prefs_velo_summary">How fast the travellers move initially</string>
    <string name="sandtrav_prefs_velo_title">Initial Velocity</string>
    
    <string name="sandtrav_prefs_sand">Sand density</string>
    <string name="sandtrav_prefs_sand_summary">Amount of sand-paint stroke to draw on cracks</string>
    <string name="sandtrav_prefs_sand_title">Sand Density</string>
     
    <!-- Guts. -->
     
    <string name="guts_title">Guts</string>
    <string name="guts_author">Moonblink</string>
    <string name="guts_desc">Eeuurghgggggg...</string>
    
    <!-- Guts Preferences. -->
    
    <string name="guts_settings">Guts preferences</string>
    
    <string name="guts_prefs_title">Guts Preferences</string>
    
    <string name="guts_prefs_cycles">Run time</string>
    <string name="guts_prefs_cycles_summary">Number of iterations to run for before resetting</string>
    <string name="guts_prefs_cycles_title">Run Time</string>
       
    <!-- Happy.Place. -->
     
    <string name="happy_title">Happy.Place</string>
    <string name="happy_author">Moonblink</string>
    <string name="happy_desc">The evolution of a system of friendly nodes.</string>
    
    <!-- Happy.Place Preferences. -->
    
    <string name="happy_settings">Happy.Place preferences</string>
    
    <string name="happy_prefs_title">Happy.Place Preferences</string>
    
    <string name="happy_prefs_cycles">Run time</string>
    <string name="happy_prefs_cycles_summary">Number of iterations to run for before resetting</string>
    <string name="happy_prefs_cycles_title">Run Time</string>

    <!-- Node.Garden. -->

    <string name="nodes_title">Node.Garden</string>
    <string name="nodes_author">Moonblink</string>
    <string name="nodes_desc">Nodes are connected together to form a Node Garden.</string>
    
    <!-- Node.Garden Preferences. -->

    <string name="nodes_settings">Node.Garden preferences</string>
    
    <string name="nodes_prefs_title">Node.Garden Preferences</string>
    
    <string name="nodes_prefs_pattern">Initial arrangement</string>
    <string name="nodes_prefs_pattern_summary">How are the nodes initially placed</string>
    <string name="nodes_prefs_pattern_title">Initial Arrangement</string>
 
    <!-- Sand.Dollar. -->

    <string name="dollar_title">Sand.Dollar</string>
    <string name="dollar_author">Moonblink</string>
    <string name="dollar_desc">An iteratively constructed radial form.</string>
    
    <!-- Sand.Dollar Preferences. -->

    <string name="dollar_settings">Sand.Dollar preferences</string>
    
    <string name="dollar_prefs_title">Sand.Dollar Preferences</string>
    
    <string name="dollar_prefs_branch">Branching density</string>
    <string name="dollar_prefs_branch_summary">How much to branch the drawn shapes</string>
    <string name="dollar_prefs_branch_title">Branching Density</string>
      
    <string name="dollar_prefs_sand">Sand painting density</string>
    <string name="dollar_prefs_sand_summary">How densely to draw each branch</string>
    <string name="dollar_prefs_sand_title">Sand Painting Density</string>
    
</resources>

