<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/sandtrav_settings"
        android:key="sandtrav_settings">

    <ListPreference
            android:key="maxCycles"
            android:title="@string/sandtrav_prefs_cycles"
            android:summary="@string/sandtrav_prefs_cycles_summary"
            android:entries="@array/sandtrav_prefs_cycles_entries"
            android:entryValues="@array/sandtrav_prefs_cycles_values"
            android:dialogTitle="@string/sandtrav_prefs_cycles_title"
            android:defaultValue="2000" />

    <CheckBoxPreference
            android:key="sandPaint"
            android:title="@string/sandtrav_prefs_spaint"
            android:summaryOff="@string/sandtrav_prefs_spaint_summary_off"
            android:summaryOn="@string/sandtrav_prefs_spaint_summary_on"
            android:defaultValue="false" />

    <ListPreference
            android:key="initVelocity"
            android:title="@string/sandtrav_prefs_velo"
            android:summary="@string/sandtrav_prefs_velo_summary"
            android:entries="@array/sandtrav_prefs_velo_entries"
            android:entryValues="@array/sandtrav_prefs_velo_values"
            android:dialogTitle="@string/sandtrav_prefs_velo_title"
            android:defaultValue="4.2" />

    <ListPreference
            android:key="sandGrains"
            android:title="@string/sandtrav_prefs_sand"
            android:summary="@string/sandtrav_prefs_sand_summary"
            android:entries="@array/sandtrav_prefs_sand_entries"
            android:entryValues="@array/sandtrav_prefs_sand_values"
            android:dialogTitle="@string/sandtrav_prefs_sand_title"
            android:defaultValue="11" />

</PreferenceScreen>

