<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/interaggregate_settings"
        android:key="interaggregate_settings">

    <ListPreference
            android:key="maxCycles"
            android:title="@string/interaggregate_prefs_cycles"
            android:summary="@string/interaggregate_prefs_cycles_summary"
            android:entries="@array/interaggregate_prefs_cycles_entries"
            android:entryValues="@array/interaggregate_prefs_cycles_values"
            android:dialogTitle="@string/interaggregate_prefs_cycles_title"
            android:defaultValue="10000" />

    <ListPreference
            android:key="numDiscs"
            android:title="@string/interaggregate_prefs_discs"
            android:summary="@string/interaggregate_prefs_discs_summary"
            android:entries="@array/interaggregate_prefs_discs_entries"
            android:entryValues="@array/interaggregate_prefs_discs_values"
            android:dialogTitle="@string/interaggregate_prefs_discs_title"
            android:defaultValue="70" />

    <ListPreference
            android:key="discSize"
            android:title="@string/interaggregate_prefs_dsize"
            android:summary="@string/interaggregate_prefs_dsize_summary"
            android:entries="@array/interaggregate_prefs_dsize_entries"
            android:entryValues="@array/interaggregate_prefs_dsize_values"
            android:dialogTitle="@string/interaggregate_prefs_dsize_title"
            android:defaultValue="200" />

    <ListPreference
            android:key="sandGrains"
            android:title="@string/interaggregate_prefs_sand"
            android:summary="@string/interaggregate_prefs_sand_summary"
            android:entries="@array/interaggregate_prefs_sand_entries"
            android:entryValues="@array/interaggregate_prefs_sand_values"
            android:dialogTitle="@string/interaggregate_prefs_sand_title"
            android:defaultValue="50" />

</PreferenceScreen>

