<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- "Select". -->
    <item android:id="@+id/menu_select" android:title="@string/menu_select"
        	android:icon="@drawable/ic_menu_show_list">
        <menu>
			<item android:id="@+id/menu_select_0" android:title="@string/substrate_title" />
			<item android:id="@+id/menu_select_1" android:title="@string/interaggregate_title" />
			<item android:id="@+id/menu_select_2" android:title="@string/sandtrav_title" />
        </menu>
    </item>

    <!-- "Preferences". -->
	<item android:id="@+id/menu_prefs" android:title="@string/menu_prefs"
    	  android:icon="@drawable/ic_menu_preferences"></item>

    <!-- "Help". -->
	<item android:id="@+id/menu_help" android:title="@string/menu_help"
    	  android:icon="@drawable/ic_menu_help"></item>

    <!-- "About". -->
	<item android:id="@+id/menu_about" android:title="@string/menu_about"
    	  android:icon="@drawable/ic_menu_info"></item>
	
    <!-- "Exit". -->
	<item android:id="@+id/menu_exit" android:title="@string/menu_exit"
    	  android:icon="@drawable/ic_menu_close"></item>
	
</menu>

