<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/eyecandy_settings" >

    <ListPreference
            android:key="bgColour"
            android:title="@string/eyecandy_prefs_bg"
            android:summary="@string/eyecandy_prefs_bg_summary"
            android:entries="@array/eyecandy_prefs_bg_entries"
            android:entryValues="@array/eyecandy_prefs_bg_values"
            android:dialogTitle="@string/eyecandy_prefs_bg_title"
            android:defaultValue="2000" />

    <ListPreference
            android:key="animSpeed"
            android:title="@string/eyecandy_prefs_speed"
            android:summary="@string/eyecandy_prefs_speed_summary"
            android:entries="@array/eyecandy_prefs_speed_entries"
            android:entryValues="@array/eyecandy_prefs_speed_values"
            android:dialogTitle="@string/eyecandy_prefs_speed_title"
            android:defaultValue="1" />

</PreferenceScreen>

